# KisanMind

./: .gitignore  README.md
Backend/: .env.example  TrainingDataset.ipynb  main.py  pyproject.toml  requirements.txt  test_output.json  test_voice_chat.py
Backend/agents/: __init__.py  disease_agent.py  market_agent.py  report_agent.py  scheme_agent.py  weather_agent.py
Backend/data/: price_encoders.pkl  price_model.pkl
Backend/graph/: __init__.py  pipeline.py
Backend/memory/: __init__.py  long_term.py  short_term.py
Backend/models/: __init__.py  price_predictor.py  state.py
Backend/utils/: __init__.py  email_client.py  image_handler.py  llm_provider.py  pdf_generator.py  supabase_client.py
Frontend/: .gitignore  README.md  index.html  package-lock.json  package.json
Frontend/src/: index.css  main.tsx
Frontend/src/admin/: AdminPortal.tsx
Frontend/src/app/: App.tsx
Frontend/src/components/: LocationHeatmap.tsx  MicButton.jsx  MicButton.tsx  ReportModal.jsx  Shared.tsx  VoiceOverlay.tsx
Frontend/src/context/: AppContext.jsx
Frontend/src/contexts/: LanguageContext.tsx
Frontend/src/data/: mockData.js  mockData.ts
Frontend/src/login/: Login.tsx
Frontend/src/screens/: AdvisoryReports.jsx  CropAnalysisPage.tsx  DashboardPage.tsx  DiseaseScan.jsx  FarmerProfile.jsx  GovernmentSchemesPage.tsx  Home.jsx  MandiPrices.jsx  MarketForecastPage.tsx  ReportsPage.tsx  Schemes.jsx  Settings.jsx  SettingsPage.tsx  Weather.jsx  WeatherPage.tsx
Frontend/src/styles/: theme.css
Frontend_backup/: package.json
Frontend_backup/src/: App.jsx
(+10 files in other folders)
