[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "chromadb>=1.5.9",
    "fastapi>=0.137.1",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "joblib>=1.5.3",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.5",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "reportlab>=4.5.1",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "tavily-python>=0.7.26",
    "uvicorn>=0.49.0",
    "xgboost>=3.2.0",
]
